--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -72,12 +72,17 @@
                                 groups="estate.group_manager"/>
 
                         <button name="signal_done" type="workflow"
-                                string="Transfer Planting"
+                                string="Validate"
                                 class="oe_highlight"
                                 states="validate2"
                                 groups="estate.group_manager"/>
 
-                         <field name="state" widget="statusbar"
+                        <button name="%(launch_session_wizard)d" type="action"
+                                colors="red"
+                                string="Transfer"
+                                attrs="{'invisible':[('state','!=','done')]}"/>
+
+                        <field name="state" widget="statusbar"
                                statusbar_visible="draft,confirmed,validate1,validate2,done"
                                statusbar_color='{"draft":"blue","pending":"red","pending2":"red",
                                "open":"green","open2":"green"}'/>
