[ADD] estate_nursery : delegation purchase order to request planting , note: error integrity partner_id - partner.id

--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -104,6 +104,7 @@
                                  'readonly': [('state','!=','draft')]}" />
                                 <field name="divisi_location_id" attrs="{'required': [('state','=','draft')],
                                  'readonly': [('state','!=','draft')]}" />
+                                <!--<field name="partner_id" string="supplier"/>-->
                             </group>
 
                             <group coolspan="10">
