[ADD] estate_nursery : koreksi Demo data culling and main nursery

--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -263,8 +263,10 @@
                     <sheet>
                         <group>
                             <group>
+                                <field name="batch_id"/>
                                 <field name="location_id"/>
                                 <field name="request_id" invisible="1"/>
+                                <field name="qty_batch"/>
                                 <field name="qty_request"/>
                             </group>
                             <group>
